Add IHubContext<THub> and IHubContext<THub, TClient> services
#58

--- a/samples/SignalRSample.Web/Hubs/DemoHub/index.html
+++ b/samples/SignalRSample.Web/Hubs/DemoHub/index.html
@@ -109,6 +109,9 @@
         <dt>Typed callback</dt>
         <dd id="typed"></dd>
 
+        <dt>Typed IHubContext callback</dt>
+        <dd id="typedContext"></dd>
+
         <dt>Message Pump</dt>
         <dd id="msg"></dd>
     </dl>
